# smart-iot-manager-IIS-VUT-FIT

./: .gitignore  Dockerfile  README.md  compose.yml  doc.html  pyproject.toml
db/scripts/: create_user.sql
devenv/: grafita.env
docker/: entrypoint.sh
documentation/: doc.html
nats/: server.conf
scripts/: startup.py
scripts/metrics-sim/: config.yaml  go.mod  main.go
src/: manage.py
src/core/: asgi.py  broker.py  settings.py  urls.py
src/grafita/: apps.py  kpi.py  models.py  urls.py
src/grafita/migrations/: 0001_initial.py  0002_devicesgroup_requested_by_alter_devicesgroup_name_and_more.py  0002_devicetypeparameter.py  0003_remove_device_device_type.py  0004_device_device_type.py
src/grafita/views/: __init__.py  auth.py  dashboard.py  device.py  device_groups.py  device_types.py  groups.py  mixins.py  roles.py  types.py  users.py
src/mq/: apps.py  input.py
src/rest/: __init__.py  device.py  device_type.py  group.py  metric.py  urls.py  user.py
src/templates/: 403.html  403_csrf.html  404.html  _base.html  create_device.html  create_device_group.html  create_device_type.html  dashboard.html  delete_device.html  delete_device_group.html  device_detail.html  device_group_detail.html  device_groups.html  device_type_create.html  device_type_delete.html  device_type_detail.html  device_type_update.html  device_types.html  devices.html  edit_device.html  edit_device_type.html  login.html  public_page.html  typelist.html  types.html  update_device_group.html
src/templates/admin/: group_detail.html  groups.html  user.html  user_detail.html
(+3 files in other folders)
