[tool.poetry]
name = "grafita"
version = "0.1.0"
description = ""
authors = ["pomo <mark.barzali@firma.seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
django-timescaledb = "^0.2.13"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
starlette = "^0.31.1"
faststream = {extras = ["nats"], version = "^0.2.3"}


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
